Final http optimizations, removed OkHttp<version>jsk.3.1.27</version> next: <version>jsk.3.1.28</version>